--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,78 @@
 <div class="w-screen h-screen flex flex-nowrap overflow-hidden">
-  <div class="flex flex-col overflow-hidden w-80 border-r-2">
-    <div class="sticky top-0 h-20 flex justify-between items-center pr-3 pl-4">
-      <span class="tracking-widest font-bold text-3xl">Figure</span>
-      <svg class="w-7" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+  <div class="flex flex-col overflow-hidden w-96 border-r-2">
+    <div class="sticky top-0 h-20 flex justify-between items-center pl-6 pr-3">
+      <span class="tracking-widest font-bold text-3xl text-gray-600">Figure</span>
+      <svg class="w-7 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+        stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
       </svg>
     </div>
     <div class="h-full overflow-y-auto overflow-x-hidden">
-      <ul >
-        <li>Dashboard</li>
+      <ul class="px-3 space-y-3 mt-5">
+        <li
+          class="flex items-center cursor-pointer text-gray-500 hover:bg-gray-200 hover:text-purple-500 transition-colors duration-400 rounded-md pl-2 py-2">
+          <svg class="w-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+            <path
+              d="M5 3a2 2 0 00-2 2v2a2 2 0 002 2h2a2 2 0 002-2V5a2 2 0 00-2-2H5zM5 11a2 2 0 00-2 2v2a2 2 0 002 2h2a2 2 0 002-2v-2a2 2 0 00-2-2H5zM11 5a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V5zM11 13a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z" />
+          </svg>
+          <span class="text-sm font-bold ml-2">Dashboard</span>
+        </li>
+        <li
+          class="flex items-center cursor-pointer text-gray-500 hover:bg-gray-200 hover:text-purple-500 transition-colors duration-400 rounded-md pl-2 py-2">
+          <svg class="w-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+            <path d="M4 3a2 2 0 100 4h12a2 2 0 100-4H4z" />
+            <path fill-rule="evenodd"
+              d="M3 8h14v7a2 2 0 01-2 2H5a2 2 0 01-2-2V8zm5 3a1 1 0 011-1h2a1 1 0 110 2H9a1 1 0 01-1-1z"
+              clip-rule="evenodd" />
+          </svg>
+          <span class="text-sm font-bold ml-2">Products</span>
+        </li>
       </ul>
     </div>
   </div>
   <div class="w-full overflow-y-auto overflow-x-hidden text-center">
-    content do later
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
+    content do later <br>
   </div>
 
 </div>
